Fix alignement labels création LDF

--- a/src/app/modules/congratulation-letter/pages/congratulation-letter-create/congratulation-letter-create.page.scss
+++ b/src/app/modules/congratulation-letter/pages/congratulation-letter-create/congratulation-letter-create.page.scss
@@ -4,6 +4,10 @@
         margin-right: 10px;
     }
 
+    .flight-date-label {
+        margin-top: 10px;
+    }
+
     .flight-date {
         ion-datetime {
             height: 40px;
@@ -13,6 +17,10 @@
             display: flex;
             align-items: center;
         }
+    }
+
+    .flight-number-label {
+        margin-top: 10px;
     }
 
     .flight-airline {
@@ -33,6 +41,10 @@
         @media(min-width: 800px) {
             justify-content: flex-end;
         }
+    }
+
+    .redactor-label {
+        margin-top: -15px;
     }
 
     .redactor-autocomplete {
